--- a/7.md
+++ b/7.md
@@ -8,27 +8,27 @@ Author: sharo
 
 ---
 
-# 7.1 Numpyの概観
+## 7.1 Numpyの概観
 
 ---
 
-# 7.1.1 NumPyとは
+### 7.1.1 NumPyとは
 
 **NumPy**とは、Pythonでベクトルや行列計算を高速で行うのに特化した基盤となるライブラリです。
 
 ---
 
-# 7.1.2 NumPyの高速な処理の体験
+### 7.1.2 NumPyの高速な処理の体験
 
 **P174-175**のコードを実行してみましょう。
 
 ---
 
-# 7.2 NumPy1次元配列
+## 7.2 NumPy1次元配列
 
 ---
 
-# 7.2.1 import
+### 7.2.1 import
 
 **NumPy**を**import**する際は
 
@@ -46,7 +46,7 @@ import numpy as np
 
 ---
 
-# 7.2.2 1次元配列
+### 7.2.2 1次元配列
 
 **NumPy**には配列を高速に扱うための**ndarray**クラスが用意されています。**ndarray**を生成する方法の1つは、**NumPy**の`np.array()`関数を用いる方法です。`np.array(リスト)`と表記し、リストを与えることで生成します。
 
@@ -62,7 +62,7 @@ np.arange(4) # 出力結果 [0 1 2 3]
 
 ---
 
-# 7.2.2ex 多次元配列
+### 7.2.2ex 多次元配列
 
 - 1次元(ベクトル)の**ndarray**クラス
 
@@ -84,13 +84,13 @@ array_3d = np.array([[[1, 2], [3, 4]], [[5, 6], [7, 8]]])
 
 ---
 
-# 7.2.3 1次元配列の計算 - 1
+### 7.2.3 1次元配列の計算 - 1
 
 リストでは、要素ごとの計算を行うためにはループを書いて要素を1つずつ取り出して計算を行う必要がありましたが、**ndarray**ではループで書く必要はありません。**ndarray**同士の算術演算では、同じ位置にある要素同士で計算されます。
 
 ---
 
-# 7.2.3 1次元配列の計算 - 2
+### 7.2.3 1次元配列の計算 - 2
 
 ```python
 # NumPyを使わない場合
@@ -104,7 +104,7 @@ print(new_storages) # 出力結果: [2, 4, 6, 8]
 
 ---
 
-# 7.2.3 1次元配列の計算 - 3
+### 7.2.3 1次元配列の計算 - 3
 
 ```python
 # NumPyを使う場合
@@ -116,7 +116,7 @@ print(storages) # 出力結果: [2 4 6 8]
 
 ---
 
-# 7.2.4 インデックス参照とスライス
+### 7.2.4 インデックス参照とスライス
 
 リスト型と同様にインデックス参照やスライスを行うことができます。
 
@@ -130,7 +130,7 @@ print(arr) # 出力結果: [1 1 1 3 4 5 6 7 8 9]
 
 ---
 
-# 7.2.5 **ndarray**の注意点
+### 7.2.5 **ndarray**の注意点
 
 **ndarray**はリストと同じように代入先の変数の値を変更すると元の**ndarray**配列の値も変更されます。そのため、**ndarray**をコピーして2つの別々の変数にしたい場合は、`copy()`メソッドを使用します。
 
@@ -144,7 +144,7 @@ print(arr1) # 出力結果: [1 2 3 4 5]
 
 ---
 
-# 7.2.6 **view**と**copy** - 1
+### 7.2.6 **view**と**copy** - 1
 
 リストと**ndarray**の相違点としては、**ndarray**のスライスは配列のコピーではなく**view**であることです。**view**とは、*もとの配列と同じデータを指していること*を指します。
 
@@ -152,7 +152,7 @@ print(arr1) # 出力結果: [1 2 3 4 5]
 
 ---
 
-# 7.2.6 **view**と**copy** - 2
+### 7.2.6 **view**と**copy** - 2
 
 ```python
 import numpy as np
@@ -173,7 +173,7 @@ print("arr_np: ", arr_np)
 
 ---
 
-# 7.2.7 ブールインデックス参照
+### 7.2.7 ブールインデックス参照
 
 ```python
 arr = np.array([2, 4, 6, 7])
@@ -187,7 +187,7 @@ print(arr[arr % 3 == 1]) # 出力結果: [4 7]
 
 ---
 
-# 7.2.8 ユニバーサル関数
+### 7.2.8 ユニバーサル関数
 
 **ユニバーサル関数**とは**ndarray**配列の各要素に対して演算した結果を返す関数のことです。
 
@@ -201,7 +201,7 @@ print(arr_abs) # 計算結果: [ 4  9 16  4 20]
 
 ---
 
-# 7.2.9 集合関数
+### 7.2.9 集合関数
 
 **集合関数**とは**数学の集合演算を行う関数**のことです。**1次元配列のみ**を対象としています。
 
@@ -222,7 +222,7 @@ print(np.setdiff1d(new_arr1, arr2)) # 出力結果: [7 9]
 
 ---
 
-# 7.2.10 乱数
+### 7.2.10 乱数
 
 NumPyでは**np.random**モジュールで乱数を生成することができます。
 
@@ -235,4 +235,169 @@ print(arr1) # 出力結果(例): [[ 3  8] [ 0  8] [ 4  2] [ 7 10] [ 2  7]]
 # 変数arr2に0~1までの一様乱数を3つ代入
 arr2 = np.random.rand(3)
 print(arr2) # 出力結果(例): [0.04966003 0.96471596 0.01744918]
+```
+
+---
+
+## 7.3 NumPy2次元配列
+
+---
+
+### 7.3.1 2次元配列
+
+```python
+import numpy as np
+# 変数arrに2次元配列を代入
+arr = np.array([[1, 2, 3, 4], [5, 6, 7, 8]])
+# 変数arrの行列の各次元毎の要素数を出力
+print(arr.shape) # 出力結果: (2, 4)
+# 変数arrを4行2列の行列に変換
+print(arr.reshape(4, 2))
+"""
+出力結果
+[[1 2]
+ [3 4]
+ [5 6]
+ [7 8]]
+"""
+```
+
+---
+
+### 7.3.2 インデックス参照とスライス
+
+```python
+arr = np.array([[1, 2, 3], [4, 5, 6]])
+print(arr[1]) # 出力結果: [4 5 6]
+```
+
+```python
+arr = np.array([[1, 2, 3], [4, 5, 6]])
+print(arr[1, 2]) # 出力結果: 6
+```
+
+```python
+arr = np.array([[1, 2, 3], [4, 5, 6]])
+print(arr[1,1:]) # 出力結果: [5 6]
+```
+
+---
+
+### 7.3.3 axis
+
+2次元配列からは**axis**という概念が重要になってきます。**axis**とは**座標軸**のようなものです。NumPyの関数の引数として**axis**を設定できる場面が多々あります。2次元配列の場合は列ごとに処理を行う軸が`axis = 0`で行ごとに行う軸が`axis = 1`ということになります。
+
+```python
+arr = np.array([[1, 2, 3], [4, 5, 6]])
+print(arr.sum()) # 出力結果: 21
+print(arr.sum(axis = 0)) # 出力結果: [5 7 9]
+print(arr.sum(axis = 1)) # 出力結果: [ 6 15]
+```
+
+---
+
+### 7.3.4 ファンシーインデックス参照
+
+**ファンシーインデックス参照**とは、インデックス参照にインデックスの配列を、用いる方法のことです。ある**ndarray**配列から**ある特定の順序で行を抽出**するには、**その順番を示す配列**をインデックス参照として渡せば良いです。
+
+```python
+arr = np.array([[1, 2], [3, 4], [5, 6], [7, 8]])
+print(arr[[3, 2, 0]]) # arr[3, 2, 0]でないことに注意
+"""
+出力結果
+[[7 8]
+ [5 6]
+ [1 2]]
+"""
+```
+
+---
+
+### 7.3.5 転置行列
+
+行列において**行と列を入れ替える事を転置**と言います。
+
+```python
+arr = np.arange(10).reshape(2, 5)
+print(arr.T) # print(np.transpose(arr))
+"""
+出力結果
+[[0 5]
+ [1 6]
+ [2 7]
+ [3 8]
+ [4 9]]
+"""
+```
+
+---
+
+### 7.3.6 ソート
+
+```python
+arr = np.array([[8, 4, 2], [3, 5, 1]])
+print(arr.argsort()) # 出力結果 [[2 1 0] [2 0 1]]
+print(np.sort(arr)) # 出力結果 [[2 4 8] [1 3 5]]
+arr.sort(1) # 行でソート
+print(arr) # 出力結果 [[2 4 8] [1 3 5]]
+```
+
+---
+
+### 7.3.7 行列計算
+
+行列計算をするための関数には、2つの行列の行列積を返す`np.dot(a, b)`関数やノルムを返す`np.linalg.norm(a)`関数等があります。
+
+```python
+arr = np.array(9).reshape(3, 3)
+print(np.dot(arr, arr))
+"""
+出力結果
+[[ 15  18  21]
+ [ 42  54  66]
+ [ 69  90 111]]
+"""
+vec = arr.reshape(9)
+print(np.linalg.norm(vec)) # 出力結果: 14.2828568570857
+```
+
+---
+
+### 7.3.8 統計関数 - 1
+
+統計関数とは**ndarray**配列全体、もしくは特定の軸を中心とした数学的な処理を行う関数、またはメソッドです。
+
+#### よく使われるメソッド
+
+| メソッド | 機能 |
+|-|:-:|
+|`mean()`|配列の要素の平均を返す|
+|`np.average()`|同上|
+|`np.max()`, `np.min()`|最大値・最小値を返す|
+|`np.std()`, `np.var()`|標準偏差・分散を返す|
+
+---
+
+### 7.3.8 統計関数 - 2
+
+```python
+arr = np.arange(15).reshape(3, 5) # [[ 0  1  2  3  4] [ 5  6  7  8  9] [10 11 12 13 14]]
+print(arr.mean(axis = 0)) # 出力結果: [5. 6. 7. 8. 9.]
+print(arr.sum(axis = 1)) # 出力結果: [10 35 60]
+print(arr.min()) # 出力結果: 0
+print(arr.argmax(axis = 0)) # 出力結果: [2 2 2 2 2]
+```
+
+---
+
+### 7.3.9 ブロードキャスト
+
+サイズの違うNumPy配列同士の演算時に、**ブロードキャスト**という処理が自動で行われます。ブロードキャストは、2つの**ndarray**同士の演算時にサイズの小さい配列の行と列を自動で大きい配列に合わせます。2つの配列の行が一致しない時は、行の少ないほうが多いほうの数に合わせ、足りない分を既存の行からコピーします。列が一致しない場合もまた然りです。どのような配列でもブロードキャストできるわけではありませんがすべての要素に同じ処理をする時などはブロードキャスト可能になります。
+
+```python
+[[0 1 2] [3 4 5]] + 1
+↓ブロードキャスト
+[[0 1 2] [3 4 5]] + [[1 1 1] [1 1 1]]
+↓計算結果
+[[1 2 3] [4 5 6]]
 ```
