--- a/8.md
+++ b/8.md
@@ -149,3 +149,134 @@ series = pd.Series(data, index = index)
 series_values = series.values
 series_index = series.index
 ```
+
+---
+
+### 8.2.4 要素を追加する
+
+**Series**に要素を追加する場合、追加する要素もまた**Series**型である必要があります。
+
+```python
+fruits = {"banana": 3, "orange": 2}
+series = pd.Series(fruits)
+series = series.append(pd.Series([3], index = ["grape"]))
+print(series)
+```
+
+```
+banana    3
+orange    2
+grape     3
+dtype: int64
+```
+
+---
+
+### 8.2.5 要素を削除する
+
+**Series**のインデックス参照を用いて、要素を削除することができます。
+
+```python
+index = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+data = [10, 5, 8, 12, 3]
+series = pd.Series(data, index = index)
+series = series.drop("strawberry")
+print(series)
+```
+
+```
+apple        10
+orange        5
+banana        8
+kiwifruit     3
+dtype: int64
+```
+
+---
+
+### 8.2.6 フィルタリング - 1
+
+```python
+index = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+data = [10, 5, 8, 12, 3]
+series = pd.Series(data, index = index)
+conditions = [True, True, False, False, False]
+print(series[conditions])
+```
+
+```
+apple     10
+orange     5
+dtype: int64
+```
+
+---
+
+### 8.2.6 フィルタリング - 2
+
+```python
+index = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+data = [10, 5, 8, 12, 3]
+series = pd.Series(data, index = index)
+print(series[series >= 5])
+print(series[series >= 5][series < 10])
+```
+
+```
+apple         10
+orange         5
+banana         8
+strawberry    12
+dtype: int64
+orange    5
+banana    8
+dtype: int64
+```
+
+---
+
+### 8.2.7 ソート - 1
+
+**Series**型の変数`series`に対して、インデックスについてのソートは`series.sort_index()`、データについてのソートは`series.sort_values()`で行うことができます。特に指定をしない限りは昇順にソートされますが、引数に`ascending=False`を渡すことで降順にソートされます。
+
+---
+
+### 8.2.7 ソート - 2
+
+```python
+index = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+data = [10, 5, 8, 12, 3]
+series = pd.Series(data, index = index)
+print(series.sort_index())
+print(series.sort_values())
+```
+
+```
+apple         10
+banana         8
+kiwifruit      3
+orange         5
+strawberry    12
+dtype: int64
+kiwifruit      3
+orange         5
+banana         8
+apple         10
+strawberry    12
+dtype: int64
+```
+
+---
+
+## 8.3 DataFrame
+
+---
+
+### 8.3.1 DataFrameの生成
+
+**DataFrame**は、**Series**を複数束ねたような2次元のデータ構造をしています。`pd.DataFrame()`に**Series**を渡すことで**DataFrame**を生成することができます。行には0から昇順に番号が付きます。
+
+`pd.DataFrame([Series, Series, ...])`
+
+---
+
