--- a/8.md
+++ b/8.md
@@ -272,11 +272,278 @@ dtype: int64
 
 ---
 
-### 8.3.1 DataFrameの生成
+### 8.3.1 DataFrameの生成 - 1
 
 **DataFrame**は、**Series**を複数束ねたような2次元のデータ構造をしています。`pd.DataFrame()`に**Series**を渡すことで**DataFrame**を生成することができます。行には0から昇順に番号が付きます。
 
 `pd.DataFrame([Series, Series, ...])`
 
+```python
+data = {
+    "fruits": ["apple", "orange", "banana", "strawberry", "kiwifruit"],
+    "year": [2001, 2002, 2001, 2008, 2006],
+    "time": [1, 4, 5, 6, 3],
+}
+df = pd.DataFrame(data)
+print(df)
+```
+
 ---
 
+### 8.3.1 DataFrameの生成 - 2
+
+out
+```
+       fruits  year  time
+0       apple  2001     1
+1      orange  2002     4
+2      banana  2001     5
+3  strawberry  2008     6
+4   kiwifruit  2006     3
+```
+
+---
+
+### 8.3.2 インデックスとカラムを設定する
+
+```python
+index = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+data1 = [10, 5, 8, 12, 3]
+data2 = [30, 25, 12, 10, 8]
+series1 = pd.Series(data1, index = index)
+series2 = pd.Series(data2, index = index)
+df = pd.DataFrame([series1, series2])
+df.index = [1, 2]
+print(df)
+```
+
+```
+   apple  orange  banana  strawberry  kiwifruit
+1     10       5       8          12          3
+2     30      25      12          10          8
+```
+
+---
+
+### 8.3.3 行を追加する
+
+```python
+index = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+data1 = [10, 5, 8, 12, 3]
+data2 = [30, 25, 12, 10, 8]
+data3 = [30, 12, 10, 8, 25, 3]
+series1 = pd.Series(data1, index = index)
+series2 = pd.Series(data2, index = index)
+index.append("pinapple")
+series3 = pd.Series(data3, index = index)
+df = pd.DataFrame([series1, series2])
+df = df.append(series3, ignore_index = True)
+print(df)
+```
+
+```
+   apple  orange  banana  strawberry  kiwifruit  pinapple
+0     10       5       8          12          3       NaN
+1     30      25      12          10          8       NaN
+2     30      12      10           8         25       3.0
+```
+
+---
+
+### 8.3.4 列を追加する
+
+```python
+index = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+data1 = [10, 5, 8, 12, 3]
+data2 = [30, 25, 12, 10, 8]
+series1 = pd.Series(data1, index = index)
+series2 = pd.Series(data2, index = index)
+new_column = pd.Series([15, 7], index = [0, 1])
+df = pd.DataFrame([series1, series2])
+df["mango"] = new_column
+print(df)
+```
+
+```
+   apple  orange  banana  strawberry  kiwifruit  mango
+0     10       5       8          12          3     15
+1     30      25      12          10          8      7
+```
+
+---
+
+### 8.3.5 データの参照
+
+DataFrameのデータは行と列を指定することで参照ができます。行、列の指定の仕方により参照の仕方が変わります。参照の方法はいくつかありますが**loc**と**iloc**を扱います。**loc**は名前による参照を行い、**iloc**は番号による参照を行います。
+
+---
+
+### 8.3.6 名前による参照 - 1
+
+```python
+data = {
+    "fruit": ["apple", "orange", "banana", "strawberry", "kiwifruit"],
+    "year": [2001, 2002, 2001, 2008, 2006],
+    "time": [1, 4, 5, 6, 3],
+}
+df = pd.DataFrame(data)
+df = df.loc[[1, 2], ["time", "year"]]
+print(df)
+```
+
+```
+   time  year
+1     4  2002
+2     5  2001
+```
+
+---
+
+### 8.3.6 名前による参照 - 2
+
+```python
+import numpy as np
+import pandas as pd
+np.random.seed(0)
+columns = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+df = pd.DataFrame()
+for column in columns:
+    df[column] = np.random.choice(range(1, 11), 10)
+df.index = range(1, 11)
+print(df.loc[range(2, 6), ["banana", "kiwifruit"]])
+```
+
+```
+   banana  kiwifruit
+2      10         10
+3       9          1
+4      10          5
+5       5          8
+```
+
+---
+
+### 8.3.7 番号による参照
+
+```python
+data = {
+    "fruits": ["apple", "orange", "banana", "strawberry", "kiwifruit"],
+    "year": [2001, 2002, 2001, 2008, 2006],
+    "time": [1, 4, 5, 6, 3],
+}
+df = pd.DataFrame(data)
+# print(df.iloc[[1, 3], [0, 2]])
+print(df)
+```
+
+```
+       fruits  time
+1      orange     4
+3  strawberry     6
+```
+
+*教科書と実行結果が異なるので注意*
+
+---
+
+### 8.3.8 行または列の削除
+
+```python
+data = {
+    "fruits": ["apple", "orange", "banana", "strawberry", "kiwifruit"],
+    "time": [1, 4, 5, 6, 3],
+    "year": [2001, 2002, 2001, 2008, 2006],
+}
+df = pd.DataFrame(data)
+print(df.drop(range(0, 2)))
+print(df.drop("year", axis = 1))
+```
+
+```
+       fruits  time  year
+2      banana     5  2001
+3  strawberry     6  2008
+4   kiwifruit     3  2006
+       fruits  time
+0       apple     1
+1      orange     4
+2      banana     5
+3  strawberry     6
+4   kiwifruit     3
+```
+
+---
+
+### 8.3.9 ソート
+
+```python
+data = {
+    "fruits": ["apple", "orange", "banana", "strawberry", "kiwifruit"],
+    "time": [1, 4, 5, 6, 3],
+    "year": [2001, 2002, 2001, 2008, 2006],
+}
+df = pd.DataFrame(data)
+print(df.sort_values(by = "year", ascending = True))
+print(df.sort_values(by = ["time", "year"], ascending = True))
+```
+
+```
+       fruits  time  year
+0       apple     1  2001
+2      banana     5  2001
+1      orange     4  2002
+4   kiwifruit     3  2006
+3  strawberry     6  2008
+       fruits  time  year
+0       apple     1  2001
+4   kiwifruit     3  2006
+1      orange     4  2002
+2      banana     5  2001
+3  strawberry     6  2008
+```
+
+---
+
+### 8.3.10 フィルタリング - 1
+
+```python
+data = {
+    "fruits": ["apple", "orange", "banana", "strawberry", "kiwifruit"],
+    "time": [1, 4, 5, 6, 3],
+    "year": [2001, 2002, 2001, 2008, 2006],
+}
+df = pd.DataFrame(data)
+print(df.index % 2 == 0)
+print(df[df.index % 2 == 0])
+```
+
+```
+      fruits  time  year
+0      apple     1  2001
+2     banana     5  2001
+4  kiwifruit     3  2006
+```
+
+---
+
+### 8.3.10 フィルタリング - 2
+
+```python
+import numpy as np
+import pandas as pd
+np.random.seed(0)
+columns = ["apple", "orange", "banana", "strawberry", "kiwifruit"]
+df = pd.DataFrame()
+for column in columns:
+    df[column] = np.random.choice(range(1, 11), 10)
+df.index = range(1, 11)
+print(df.loc[(df["apple"] >= 5) & (df["kiwifruit"] >= 5)])
+# df.loc[df["apple"] >= 5][df["kiwifruit"] >= 5)]ではwarningが出る
+```
+
+```
+   apple  orange  banana  strawberry  kiwifruit
+1      6       8       6           3         10
+5      8       2       5           4          8
+8      6       8       4           8          8
+```
