--- a/8.md
+++ b/8.md
@@ -538,7 +538,7 @@ for column in columns:
     df[column] = np.random.choice(range(1, 11), 10)
 df.index = range(1, 11)
 print(df.loc[(df["apple"] >= 5) & (df["kiwifruit"] >= 5)])
-# df.loc[df["apple"] >= 5][df["kiwifruit"] >= 5)]ではwarningが出る
+# df.loc[df["apple"] >= 5][df["kiwifruit"] >= 5]ではwarningが出る
 ```
 
 ```
