--- a/8.md
+++ b/8.md
@@ -432,8 +432,7 @@ data = {
     "time": [1, 4, 5, 6, 3],
 }
 df = pd.DataFrame(data)
-# print(df.iloc[[1, 3], [0, 2]])
-print(df)
+print(df.iloc[[1, 3], [0, 2]])
 ```
 
 ```
