--- a/9.md
+++ b/9.md
@@ -174,6 +174,6 @@ df.diff(-2, axis = 0) # 2行後の行との差を計算したDataFrameを生成
 データベースやDataFrameに対して、ある特定の列について同じ値を持つ行を集約することを**グループ化**と呼びます。GroupByオブジェクトに対して、各グループの平均値を求める`mean()`や和を求める`sum()`などの演算を行うことができます。
 
 ```python
-grouped_region = prefecture_df.groupby('Regioin')
+grouped_region = prefecture_df.groupby('Region')
 mean_df = grouped_region.mean()
 ```
